# src/modules/deliveries/useCases/updateDeliveryman/UpdateDeliverymanController.ts
@@ -1,0 +1,21 @@
+import { Request, Response } from 'express';
+
+import { UpdateDeliverymanUseCase } from './UpdateDeliverymanUseCase';
+
+class UpdateDeliverymanController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { id_deliveryman } = request;
+    const { id_delivery } = request.params;
+
+    const updateDeliverymanUseCase = new UpdateDeliverymanUseCase();
+
+    const delivery = await updateDeliverymanUseCase.execute({
+      id_deliveryman,
+      id_delivery
+    });
+
+    return response.json(delivery);
+  }
+}
+
+export { UpdateDeliverymanController };
